--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,25 +18,36 @@
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/scroollRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--Recent activities will appear here-->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="392dp"
-        android:layout_height="550dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <android.widget.ScrollView
+        android:id="@+id/scroollRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <!-- LinearLayout dentro do ScrollView -->
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- RecyclerView dentro do ScrollView -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="9dp"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="14dp" />
+
+        </LinearLayout>
+    </android.widget.ScrollView>
 
     <Button
         android:id="@+id/btnMenu"
@@ -73,7 +84,8 @@
         android:padding="16dp"
         android:translationX="100dp"
         android:visibility="gone"
-        tools:layout_editor_absoluteX="100dp">
+        tools:layout_editor_absoluteX="100dp"
+        tools:ignore="MissingConstraints">
 
         <Button
             android:id="@+id/btnProfile"
@@ -86,7 +98,7 @@
             app:iconTint="#98A5FE" />
 
         <Button
-            android:id="@+id/btn"
+            android:id="@+id/btnStatistics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -96,7 +108,7 @@
             app:iconTint="#98A5FE" />
 
         <Button
-            android:id="@+id/btn"
+            android:id="@+id/btnGroups"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
