--- a/app/src/main/res/layout/dialog_group.xml
+++ b/app/src/main/res/layout/dialog_group.xml
@@ -53,29 +53,29 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20sp"
-                android:gravity="end|center_vertical"
-                android:orientation="horizontal">
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginEnd="20sp"-->
+<!--                android:gravity="end|center_vertical"-->
+<!--                android:orientation="horizontal">-->
 
-                <ImageView
-                    android:id="@+id/personIcon"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginEnd="10dp"
-                    android:src="@drawable/icon_profile2"
-                    app:tint="#FFFFFF" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/personIcon"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:layout_marginEnd="10dp"-->
+<!--                    android:src="@drawable/icon_profile2"-->
+<!--                    app:tint="#FFFFFF" />-->
 
-                <TextView
-                    android:id="@+id/tvPeople"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
-            </LinearLayout>
+<!--                <TextView-->
+<!--                    android:id="@+id/tvPeople"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="1"-->
+<!--                    android:textColor="#FFFFFF"-->
+<!--                    android:textSize="18sp" />-->
+<!--            </LinearLayout>-->
         </LinearLayout>
 
 
@@ -105,15 +105,28 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btAcessarGrupo"
+            android:id="@+id/btViewGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="#0022FF"
-            android:layout_marginTop="25sp"
+            android:layout_marginTop="25dp"
             android:text="Ver Grupo"
             app:icon="@drawable/eye"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/btnDeleteGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Excluir Grupo"
+            android:visibility="visible"
+            android:backgroundTint="#f50f39"
+          />
+
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
