--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -4,7 +4,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MonitorActivity">
+    tools:context=".MonitorActivity"
+    android:background="@drawable/background">
 
     <!-- Status da Atividade -->
     <TextView
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Nenhuma atividade em andamento"
         android:textSize="18sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="Passos: 0"
         android:textSize="16sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/stopButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +65,7 @@
         android:layout_height="wrap_content"
         android:text="Calorias: 0.0"
         android:textSize="16sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/stepsCount"
         app:layout_constraintStart_toStartOf="parent"
