--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -69,6 +69,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="162dp"
         android:backgroundTint="#0022FF"
+        android:textColor="#FFFFFF"
         android:padding="8dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +113,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="154dp"
         android:backgroundTint="#0022FF"
+        android:textColor="#FFFFFF"
         android:padding="8dp"
         android:text="Change password"
         app:layout_constraintEnd_toEndOf="parent"
