--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -81,7 +81,7 @@
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:background="@drawable/white"
+        android:background="#212121"
         android:orientation="vertical"
         android:padding="16dp"
         android:translationX="100dp"
