--- a/app/src/main/res/layout/dialog_group.xml
+++ b/app/src/main/res/layout/dialog_group.xml
@@ -9,7 +9,7 @@
     android:padding="10dp"
     app:cardBackgroundColor="#F6212121"
     app:cardCornerRadius="8dp"
-    tools:context=".HomeActivity">
+    tools:context=".GroupsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,30 +52,6 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginEnd="20sp"-->
-<!--                android:gravity="end|center_vertical"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/personIcon"-->
-<!--                    android:layout_width="30dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:layout_marginEnd="10dp"-->
-<!--                    android:src="@drawable/icon_profile2"-->
-<!--                    app:tint="#FFFFFF" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/tvPeople"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="1"-->
-<!--                    android:textColor="#FFFFFF"-->
-<!--                    android:textSize="18sp" />-->
-<!--            </LinearLayout>-->
         </LinearLayout>
 
 
