--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -12,20 +12,22 @@
         android:id="@+id/btnAddUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Adicionar usuário"
+        android:layout_marginBottom="83dp"
         android:backgroundTint="#0022FF"
+        android:text="Adicionar usuário"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewGroupUsers"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="398dp"
+        android:layout_height="206dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="330dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAddUser"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@+id/btnAddUser"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="6dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
