--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -13,37 +13,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nenhuma atividade em andamento"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Botão para Iniciar Atividade -->
+    <!-- Cronômetro Estilizado -->
+
+    <Chronometer
+        android:id="@+id/chronometer"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/stopwatch_background"
+        android:gravity="center"
+        android:padding="16dp"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activityStatus" />
+
     <Button
         android:id="@+id/startButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#4CAF50"
         android:text="Iniciar Atividade"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/activityStatus"
+        app:layout_constraintEnd_toStartOf="@+id/stopButton"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/chronometer" />
 
     <!-- Botão para Encerrar Atividade -->
     <Button
         android:id="@+id/stopButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="#F44336"
         android:text="Encerrar Atividade"
         android:textColor="#FFFFFF"
-        android:enabled="false"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/startButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/startButton"
+        app:layout_constraintTop_toBottomOf="@+id/chronometer" />
 
     <!-- Texto de Contagem de Passos -->
     <TextView
@@ -51,12 +78,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Passos: 0"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/stopButton"
+        app:layout_constraintTop_toBottomOf="@+id/startButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Texto de Calorias -->
     <TextView
@@ -64,12 +91,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calorias: 0.0"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/stepsCount"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
