--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -12,7 +12,7 @@
         android:id="@+id/activityStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nenhuma atividade em andamento"
+        android:text="No activities in progress."
         android:textSize="20sp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="32dp"
@@ -49,7 +49,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#4CAF50"
-        android:text="Iniciar Atividade"
+        android:text="Start Activity"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/stopButton"
         app:layout_constraintHorizontal_weight="1"
@@ -65,7 +65,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#F44336"
-        android:text="Encerrar Atividade"
+        android:text="Close Activity"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -77,7 +77,7 @@
         android:id="@+id/stepsCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Passos: 0"
+        android:text="Steps: 0"
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="24dp"
@@ -90,7 +90,7 @@
         android:id="@+id/caloriesBurned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calorias: 0.0"
+        android:text="Calories: 0.0"
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:layout_marginTop="8dp"
